--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -57,6 +57,8 @@ jobs:
       - name: Publish release
         shell: bash -l {0}
         run: |
+            echo "${{ secrets.GITHUB_TOKEN }}" > token.dat
+            gh auth login --with-token < token.dat
             NOTES="Release ${{ steps.npm-publish.outputs.published-version }} created by workflow"
             gh release create ${{ steps.npm-publish.outputs.published-version }} --notes "${NOTES}" --prerelease
 
